@@ -15,6 +15,7 @@ import static org.junit.Assert.assertEquals;
 
 /**
  * Created by guillaume on 16.10.17.
+ *
  */
 
 @RunWith(AndroidJUnit4.class)
@@ -34,8 +35,7 @@ public class OpenFoodQueryTest {
             @Override
             public void onPostExecute(String result) {
 
-
-                HTTPRequestResponse resp = new HTTPRequestResponse();
+                HTTPRequestResponse resp;
                 try {
                     resp = new HTTPRequestResponse(result);
                     assertEquals(resp.GetProductQuantity(), "245.0g");
@@ -50,9 +50,9 @@ public class OpenFoodQueryTest {
                     //Map.Entry<String,Double> e = it.next();
                     //assertEquals(e.getValue(),new Double(0.0));
 
-                    assertEquals(parsed_nutrients.get("Sel (g)"), new Double(0.0));
-                    assertEquals(parsed_nutrients.get("Énergie (kCal)"), new Double(67.0));
-                    assertEquals(parsed_nutrients.get("Énergie (kJ)"), new Double(280.0));
+                    assertEquals(parsed_nutrients.get("Sel (g)"), Double.valueOf(0.0));
+                    assertEquals(parsed_nutrients.get("Énergie (kCal)"), Double.valueOf(67.0));
+                    assertEquals(parsed_nutrients.get("Énergie (kJ)"), Double.valueOf(280.0));
 
                 } catch (Exception e) {
 
@@ -111,6 +111,35 @@ public class OpenFoodQueryTest {
             } catch (Exception e) {
                 fail(e.getMessage());
             }
+        }
+
+
+    }
+
+    @Test
+    public void CacheQueryTest()
+    {
+        String barcode = "7610848337010";
+        try {
+            HTTPRequestResponse resp = OpenFoodQuery.GetOrCreateHTTPRequestResponse(barcode);
+            assertEquals(resp.GetProductQuantity(), "245.0g");
+            assertEquals(resp.GetProductName("fr"), "Mangue : en tranches");
+        } catch (Exception e) {
+            fail(e.getMessage());
+        }
+
+        if (OpenFoodQuery.isCached(barcode))
+        {
+            try {
+                HTTPRequestResponse resp = OpenFoodQuery.get(barcode);
+                assertEquals(resp.GetProductIngredients("fr"), "mangue (Thaïlande), eau, sucre, acidifiant (E330)");
+                assertEquals(resp.GetProductNutrients("fr"), "Sel: 0.0g\nProtéines: 0.5g\nFibres alimentaires: 1.5g\nSucres: 15.0g\n" +
+                        "Glucides: 15.0g\nAcides gras saturées: 0.0g\nMatières grasses: 0.0g\nÉnergie (kCal): 67.0kCal\nÉnergie: 280.0kJ\n");
+            } catch (Exception e) {
+                fail(e.getMessage());
+            }
+        } else {
+            fail("barcode should be cached");
         }
 
 
